<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#6750A4"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:textSize="23sp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:layout_marginStart="20dp"
            android:text="@string/title"/>
        <ImageView
            android:id="@+id/moreOptionsIcon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="15dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="10dp"
            android:src="@drawable/options"
            android:onClick="showPopupMenu"
            android:contentDescription="@string/more_options"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:orientation="vertical"
        android:background="@drawable/background">

        <WebView
            android:id="@+id/webview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            />

    <CheckBox
        android:id="@+id/advancedOptionsCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:layout_marginStart="-8dp"
        android:textColor="#222222"
        android:text="@string/advanced_option"/>

        <LinearLayout
            android:id="@+id/advancedOptionsLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">
            <Button
                android:id="@+id/outputFolderButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="output folder"
                android:background="@drawable/button"
                android:layout_marginVertical="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="visible">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quality"
                    android:textColor="#222222"
                    android:textSize="18sp"/>
                <EditText
                    android:id="@+id/qualityEditText"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="95"
                    android:textColor="#222222"
                    android:layout_height="50dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="size : "
                    android:textColor="#222222"
                    android:textSize="18sp"/>
                <EditText
                    android:id="@+id/imgScaleEditText"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="100"
                    android:textColor="#222222"
                    android:layout_height="50dp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom">
            <Button
                android:id="@+id/selectAndTransButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="20sp"
                android:layout_marginTop="30dp"
                android:text="@string/select_img"
                android:background="@drawable/button"/>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>
